# webscrape

./: .env.example  .gitignore  PROMPT.md  README.md  SPEC.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
configs/: example_blog.yaml  example_products.yaml  example_quotes.yaml
src/webscrape/: __init__.py  cli.py  client.py  config.py  ratelimit.py  retry.py  robots.py  scraper.py  useragent.py
src/webscrape/export/: base.py  csv_export.py  json_export.py  sqlite_export.py
src/webscrape/parser/: base.py  css.py  xpath.py
tests/: conftest.py  test_client.py  test_config.py  test_export.py  test_integration.py  test_parser_css.py  test_parser_xpath.py  test_ratelimit.py  test_retry.py  test_robots.py  test_scraper.py  test_useragent.py
